# meta_skill

./: .gitignore  AGENTS.md  CODEMAP.md  Cargo.toml  PLAN_TO_MAKE_METASKILL_CLI.md  PLAN_TO_MAKE_METASKILL_CLI__CONDENSED.md  README.md  insta.yaml  metaskill_polished_prompts.md  update_deps.py  update_deps_stable.py
.beads/: issues.jsonl
.github/workflows/: bench.yml  ci.yml  e2e.yml  release.yml
.ms/meta-skills/: api-design.toml  frontend-polish.toml  rust-safety.toml
benches/: search_perf.rs
docs/: TESTING_STRATEGY.md  bundles.md  prompt_injection_defense.md  robot-mode-audit.md  shell_integration.md
migrations/: 004_add_acip_quarantine.sql  005_add_acip_quarantine_reviews.sql  008_add_skill_feedback.sql
scripts/: install.sh  process_triage.sh  test_beads_e2e.sh  test_install_e2e.sh  test_install_functions.sh  test_install_integration.sh
skills/building-glamorous-tuis/: SKILL.md
src/: config.rs  error.rs  lib.rs  main.rs  simulation.rs  templates.rs
src/agent_mail/: mod.rs
src/antipatterns/: detection.rs  mod.rs  types.rs
src/auth/: device_code.rs  mod.rs  token_storage.rs
src/beads/: client.rs  concurrent_tests.rs  mock.rs  mod.rs  types.rs  wal_safety_tests.rs
src/bundler/: blob.rs  github.rs  install.rs  local_safety.rs  manifest.rs  mod.rs  package.rs  registry.rs
src/cass/: brenner.rs  mining.rs  mod.rs  quality.rs  uncertainty.rs
src/cli/: mod.rs  output.rs  progress.rs
src/cli/commands/: antipatterns.rs  auth.rs  backup.rs  build.rs  bundle.rs  config.rs  conflicts.rs  contract.rs  dedup.rs  doctor.rs  edit.rs  embed.rs  evidence.rs  experiment.rs  feedback.rs  fmt.rs  graph.rs  index.rs  init.rs  install.rs  list.rs  load.rs  machine.rs  mcp.rs  meta.rs  migrate.rs  mod.rs  outcome.rs  prune.rs  recommend.rs  remote.rs  requirements.rs  safety.rs  search.rs  security.rs  setup.rs  shell.rs  show.rs  simulate.rs  suggest.rs  (+4 more)
src/cli/formatters/: mod.rs  search_results.rs  skill_card.rs  suggestion.rs
src/cm/: client.rs
src/context/: collector.rs  detector.rs  mod.rs  scoring.rs
src/core/: dependencies.rs  disclosure.rs  layering.rs  mod.rs  overlay.rs  pack_contracts.rs  packing.rs  recovery.rs  resolution.rs  resolution_cache.rs  safety.rs  skill.rs  slicing.rs  spec_lens.rs  spec_migration.rs
src/dedup/: mod.rs
src/error/: codes.rs  mod.rs  suggestions.rs
src/graph/: bv.rs  mod.rs  skills.rs
src/import/: formatting.rs  generator.rs  mod.rs
src/meta_skills/: manager.rs  mod.rs  parser.rs  registry.rs  types.rs
src/output/: detection.rs  errors.rs  fallback.rs  mod.rs  plain_format.rs  progress.rs  rich_output.rs  safe.rs  test_utils.rs
src/quality/: skill.rs  ubs.rs
src/search/: context.rs  embeddings.rs  embeddings_local.rs  filters.rs  hybrid.rs  mod.rs  tantivy.rs  tantivy_index.rs
src/security/: acip.rs  acip_default.md  command_safety.rs  secret_scanner.rs
src/skill_md/: mod.rs  templates.rs
src/storage/: git.rs  migrations.rs  mod.rs  sqlite.rs  tombstone.rs  tx.rs
src/suggestions/: mod.rs
src/suggestions/bandit/: context.rs  contextual.rs  features.rs  types.rs
src/sync/: config.rs  engine.rs  jfp.rs  machine.rs  mod.rs  ru.rs  state.rs
src/test_utils/: arbitrary.rs  fixtures.rs  logging.rs  mock_server.rs  mod.rs
src/testing/: mod.rs  runner.rs  steps.rs
src/tui/: browse.rs  build_tui.rs  mod.rs
src/updater/: check.rs  download.rs  mod.rs  verify.rs
src/utils/: format.rs  fs.rs  git.rs
tests/: cli.rs
tests/common/: rich_output_helpers.rs
tests/e2e/: auto_load_workflow.rs  fixture.rs  fresh_install.rs  layer_conflict.rs  list_workflow.rs  main.rs  mcp_workflow.rs  rich_output_workflow.rs  safety_workflow.rs  search_workflow.rs  security_workflow.rs  skill_creation.rs  sync_workflow.rs
tests/fixtures/bundles/: README.md  invalid_checksum.msb  invalid_header.msb  minimal.msb  multi_skill.msb
tests/integration/: backup_tests.rs  beads_real_tests.rs  bundle_fixture_tests.rs  cli_tests.rs  db_state_tests.rs  error_handling_tests.rs  fixture.rs  fixture_tests.rs  main.rs  migration_tests.rs  mod.rs  more_cli_tests.rs  output_format_tests.rs  skill_md_tests.rs  workflow_tests.rs
tests/properties/: main.rs  roundtrip_tests.rs  safety_tests.rs
tests/snapshots/: cli_output.rs  diagnostics.rs  disclosure_levels.rs  error_messages.rs  mod.rs  skill_compilation.rs
tests/snapshots/snapshots/: snapshot_tests__snapshots__cli_output__list_human.snap  snapshot_tests__snapshots__cli_output__list_robot_json.snap  snapshot_tests__snapshots__cli_output__search_human.snap  snapshot_tests__snapshots__cli_output__search_robot_json.snap  snapshot_tests__snapshots__cli_output__show_human.snap  snapshot_tests__snapshots__cli_output__show_robot_json.snap  snapshot_tests__snapshots__diagnostics__doctor_output.snap  snapshot_tests__snapshots__disclosure_levels__disclosure_complete.snap  snapshot_tests__snapshots__disclosure_levels__disclosure_full.snap  snapshot_tests__snapshots__disclosure_levels__disclosure_minimal.snap  snapshot_tests__snapshots__disclosure_levels__disclosure_overview.snap  snapshot_tests__snapshots__disclosure_levels__disclosure_standard.snap  snapshot_tests__snapshots__error_messages__error_config_error.snap  snapshot_tests__snapshots__error_messages__error_not_found.snap  snapshot_tests__snapshots__error_messages__error_skill_not_found.snap  snapshot_tests__snapshots__error_messages__error_validation_failed.snap  snapshot_tests__snapshots__skill_compilation__compilation_full.snap  snapshot_tests__snapshots__skill_compilation__compilation_minimal.snap
tests/unit/: agent_mail_tests.rs  main.rs  output_detection_tests.rs  template_tests.rs  theme_tests.rs
