[package]
name = "ms"
version = "0.1.0"
edition = "2024"
resolver = "2"
authors = ["Jeffrey Emanuel <jeff@jeffreyemanuel.dev>"]
description = "Meta Skill - Mine CASS sessions to generate Claude Code skills"
license = "MIT"
repository = "https://github.com/Dicklesworthstone/meta_skill"
homepage = "https://github.com/Dicklesworthstone/meta_skill"
keywords = ["cli", "skills", "ai", "claude", "cass"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.85"
exclude = [
    ".github/",
    ".beads/",
    "scripts/",
    "*.md",
    "!README.md",
]

[[bin]]
name = "ms"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
clap_complete = "4.5"

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "io-util", "time", "signal"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }

# Search
tantivy = "0.22"

# Git
git2 = "0.19"

# Terminal output
colored = "2.1"
indicatif = "0.17"
console = "0.15"

# High-performance text processing
regex = "1.10"
memchr = "2.7"
unicode-normalization = "0.1"

# Semantic search / embeddings
half = "2.4"
wide = "0.7"
ring = "0.17"

# Parallelism
rayon = "1.10"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi", "json"] }

# Utilities
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5.0"
walkdir = "2.5"
glob = "0.3"
sha2 = "0.10"
hex = "0.4"
once_cell = "1.19"
itertools = "0.13"
textwrap = "0.16"
semver = "1.0"

[build-dependencies]
vergen-gix = { version = "1.0", features = ["build", "cargo", "rustc"] }

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"
insta = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []

[[bench]]
name = "search_perf"
harness = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
