[package]
name = "ms"
version = "0.1.0"
edition = "2024"
resolver = "2"
authors = ["Jeffrey Emanuel <jeff@jeffreyemanuel.dev>"]
description = "Meta Skill - Mine CASS sessions to generate Claude Code skills"
license = "MIT"
repository = "https://github.com/Dicklesworthstone/meta_skill"
homepage = "https://github.com/Dicklesworthstone/meta_skill"
keywords = ["cli", "skills", "ai", "claude", "cass"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.85"
exclude = [
    ".github/",
    ".beads/",
    "scripts/",
    "*.md",
    "!README.md",
]

[[bin]]
name = "ms"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5.54", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
clap_complete = "4.5.65"

# Async runtime
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "fs", "io-util", "time", "signal"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
toml = "0.9.8"

# Database
rusqlite = { version = "0.38.0", features = ["bundled", "modern_sqlite"] }

# Search
tantivy = "0.25.0"

# Git
git2 = "0.20.3"

# Terminal output
colored = "3.0.0"
indicatif = "0.18.3"
console = "0.16.2"

# TUI
ratatui = "0.30.0"
crossterm = "0.29.0"

# High-performance text processing
regex = "1.12.2"
memchr = "2.7.6"
unicode-normalization = "0.1.25"
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "json"] }
urlencoding = "2.1.3"

# Semantic search / embeddings
half = "2.7.1"
wide = "1.1.1"
ring = "0.17.14"

# Parallelism
rayon = "1.11.0"
crossbeam-channel = "0.5.15"
parking_lot = "0.12.5"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "ansi", "json"] }

# Utilities
chrono = { version = "0.4.43", default-features = false, features = ["std", "clock", "serde"] }
uuid = { version = "1.19.0", features = ["v4"] }
dirs = "6.0.0"
walkdir = "2.5.0"
glob = "0.3.3"
sha2 = "0.10.9"
hex = "0.4.3"
base64 = "0.22.1"
once_cell = "1.21.3"
itertools = "0.14.0"
textwrap = "0.16.2"
semver = { version = "1.0.27", features = ["serde"] }
fs2 = "0.4.3"
hostname = "0.4.2"
libc = "0.2.180"
tempfile = "3.24.0"
rand = "0.9.2"
rand_distr = "0.5.1"
which = "8.0.0"
humantime-serde = "1.1.1"
lru = "0.14"

[build-dependencies]
vergen-gix = { version = "1.0.9", features = ["build", "cargo", "rustc"] }

[dev-dependencies]
tempfile = "3.24.0"
assert_cmd = "2.1.2"
predicates = "3.1.3"
insta = { version = "1.46.0", features = ["json", "yaml"] }
criterion = { version = "0.8.1", features = ["html_reports"] }
proptest = "1.9.0"
proptest-derive = "0.7.0"
httpmock = "0.8.2"

[features]
default = []

[[bench]]
name = "search_perf"
harness = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

# Profiling profile: release optimizations with debug symbols for flamegraph/perf
# Usage: cargo build --profile=profiling
# Then: cargo flamegraph --profile=profiling --bin ms -- search "query"
[profile.profiling]
inherits = "release"
debug = true
strip = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
